# hil_sdk_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  start_qcap.sh  start_qcap_push.sh
config/: hil_config_fromALGPub.json  hil_config_fromDir.json  hil_config_fromFile.json  hil_config_fromImage.json  hil_config_fromQCAP.json  hil_config_fromVTD.json  hil_config_fromVideo.json
hil_sdk/include/alg_common/: basic_types.h
hil_sdk/include/alg_cvt/: alg_cvtColor.h
hil_sdk/include/alg_sdk/: alg_sdk.h  pull.h  server.h
hil_sdk/include/alg_video_decode/: alg_ffmpeg_avdecode.h  decoder_ff.h
hil_sdk/include/device_handler/: HIL_device_fromALGPub.h  HIL_device_fromDir.h  HIL_device_fromFile.h  HIL_device_fromTCP.h  alg_input_device.h  video_source.h  video_source_fromALGPub.h  video_source_fromDir.h  video_source_fromFile.h  video_source_fromTCP.h
hil_sdk/include/device_handler_image/: HIL_device_fromImage.cpp  HIL_device_fromImage.h  video_source_fromImage.cpp  video_source_fromImage.h
hil_sdk/include/device_handler_qcap/: HIL_device_fromQCap.h  video_source_fromQCap.h
hil_sdk/include/device_handler_video/: HIL_device_fromVideo.h  video_source_fromVideo.h
hil_sdk/include/device_handler_vtd/: HIL_device_fromVTD.h  video_source_fromVTD.h
hil_sdk/include/utils/: image_feed.h  packet.h  ringbuffer.h  socket.h  source.h  tcpclient.h  utils.h
hil_sdk/lib/linux/x86_64/: libalg_cv_cvtColor.so.0  libalg_cv_cvtColor.so.1.0.0.3  libalg_cv_cvtColor.so.1.0.0.9  libalg_video_decode_ffmpeg.so.0  libalg_video_decode_ffmpeg.so.0.0.4  libalg_video_decode_ffmpeg.so.0.0.5  libalg_video_decode_ffmpeg.so.0.0.6  libhil_sdk.so.0  libhil_sdk.so.0.0.1  libhil_sdk.so.0.0.2  libhil_sdk.so.0.0.3  libhil_sdk.so.0.0.4  libhil_sdk.so.0.0.5  libhil_sdk.so.0.0.6  libhil_sdk.so.0.0.7  libhil_sdk.so.0.0.8  libhil_sdk.so.0.0.9  libhil_sdk.so.0.1.0  libhil_sdk.so.0.1.1  libhil_sdk.so.0.1.1.99  libhil_sdk.so.0.1.2  libhil_sdk.so.0.1.2.3  libhil_sdk.so.0.1.2.4  libhil_sdk.so.0.1.3  libhil_sdk.so.0.1.3.1  libhil_sdk.so.0.1.4  libhil_sdk.so.0.1.4.2  libhil_sdk.so.0.1.5.1  libhil_sdk.so.0.1.6  libhil_sdk_device.so.0  libhil_sdk_device.so.0.0.1  libhil_sdk_device.so.0.0.11  libhil_sdk_device.so.0.0.12  libhil_sdk_device.so.0.0.12.1  libhil_sdk_device.so.0.0.2  libhil_sdk_device.so.0.0.3  libhil_sdk_device.so.0.0.4  libhil_sdk_device.so.0.0.5  libhil_sdk_device.so.0.0.6  libhil_sdk_device.so.0.0.7  (+14 more)
include/: Mutex.h  RingBuffer.h  utils.h
src/c/demo/: demo_ALG_Pub.cpp  demo_QCAP_Pub.cpp  demo_device_fromALGPub.cpp  demo_device_fromAny.cpp  demo_device_fromDir.cpp  demo_device_fromFile.cpp  demo_device_fromImage.cpp  demo_device_fromQCap.cpp  demo_device_fromTCP.cpp  demo_device_fromVTD.cpp  demo_device_fromVideo.cpp  demo_init.c  demo_push_1_ch.cpp  demo_push_multi_ch.cpp  demo_push_qcap.cpp  demo_push_v4l2.cpp  demo_service.c
src/c/qcap/: qcapdev.cpp  qcapdev.h
src/c/utils/: Mutex.cpp  RingBuffer.cpp  image_feed.cpp  utils.cpp
src/include/: image_feed.h  utils.h
src/python/: algDeviceHandler.py  algSDKpy.py  demo_device_fromDir.py  demo_device_fromFile.py  demo_device_fromImage.py  demo_device_fromQCap.py  demo_device_fromVideo.py  image_feed.py  init_sdk.py  push_image_single.py  push_video_decode.py  raw12_padding_batch.py  set_channel_active.py  set_image_mode_and_size.py  stream_on_off_test.py  video_convert_gst.py  video_decoder.py
